--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "sass": "^1.97.3",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^4.0.0",
+    "@pinia/testing": "^1.0.3",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^20.7.0",
+    "vitest": "^4.0.18"
   }
 }
